Add a link for the homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rupnet-clothing",
   "version": "0.1.0",
+  "homepage": "https://savan2508.github.io/rupnet-cloth-shopping/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "gh-pages": "^6.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1"
   }
