--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rupnet-clothing",
   "version": "0.1.0",
   "homepage": "https://savan2508.github.io/rupnet-cloth-shopping/",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +10,7 @@
     "firebase": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
