--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.1",
     "sass": "^1.77.8",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -45,8 +48,8 @@
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.3.3",
-    "react-router-dom": "^6.25.1",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.25.1"
   }
 }
