--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://savan2508.github.io/rupnet-cloth-shopping/",
   "private": false,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
