--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
+    "@types/styled-components": "^5.1.34",
     "firebase": "^10.12.4",
     "globals": "^15.8.0",
     "react": "^18.3.1",
