--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
+    "redux-saga-test-plan": "^4.0.6",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.1",
     "sass": "^1.77.8",
